chore(KIBON-3025): fix some spacing issues

--- a/ebegu-web/src/admin/component/testdatenView/testdatenView.component.less
+++ b/ebegu-web/src/admin/component/testdatenView/testdatenView.component.less
@@ -30,7 +30,6 @@
 
     .input-testfall {
         background: @lgrey;
-        padding: 1rem;
         .md-input-focused & {
             padding: 1rem;
         }
@@ -52,6 +51,9 @@
     table {
         min-width: 0 !important;
     }
+
+    --mdc-typography-body1-font-family: Roboto, Helvetica Neue, sans-serif;
+    --mdc-typography-body1-font-size: 1.6rem;
 
 }
 
